k8s/base/cassandra-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cassandra
  labels:
    app: gridcapa
    component: cassandra
spec:
  selector:
    matchLabels:
      app: gridcapa
      component: cassandra
  template:
    metadata:
      labels:
        app: gridcapa
        component: cassandra
    spec:
      containers:
        - name: cassandra
          image: docker.io/bitnami/cassandra
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9042
              name: cql
          resources:
            limits:
              cpu: "500m"
              memory: 1Gi
            requests:
              cpu: "500m"
              memory: 1Gi
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - nodetool drain
          volumeMounts:
            - name: cassandra-data
              mountPath: /bitnami
            - name: cassandra-load-schema
              mountPath: /docker-entrypoint-initdb.d/schema.cql
              subPath: schema.cql
              readOnly: true
      volumes:
        - name: cassandra-load-schema
          configMap:
            name: cassandra-schema
        - name: cassandra-data
          persistentVolumeClaim:
            claimName: cassandra-storage
