k8s/base/cassandra-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cassandra
  labels:
    app: gridcapa
    component: cassandra
spec:
  serviceName: cassandra-peers
  replicas: 2
  selector:
    matchLabels:
      app: gridcapa
      component: cassandra
  template:
    metadata:
      labels:
        app: gridcapa
        component: cassandra
    spec:
      terminationGracePeriodSeconds: 1800
      containers:
        - name: cassandra
          image: docker.io/bitnami/cassandra
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7000
              name: intra-node
            - containerPort: 7001
              name: tls-intra-node
            - containerPort: 7199
              name: jmx
            - containerPort: 9042
              name: cql
          resources:
            limits:
              cpu: "500m"
              memory: 2Gi
            requests:
              cpu: "500m"
              memory: 2Gi
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - nodetool drain
          volumeMounts:
            - name: cassandra-data
              mountPath: /bitnami
            - name: cassandra-load-schema
              mountPath: /docker-entrypoint-initdb.d/schema.cql
              subPath: schema.cql
              readOnly: true
      volumes:
        - name: cassandra-load-schema
          configMap:
            name: cassandra-schema
  # These are converted to volume claims by the controller
  # and mounted at the paths mentioned above.
  # do not use these in production until ssd GCEPersistentDisk or other ssd pd
  volumeClaimTemplates:
    - metadata:
        name: cassandra-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: cassandra-storage-class
        resources:
          requests:
            storage: 1Gi
