k8s/base/config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  labels:
    app: gridcapa
    component: config-server
spec:
  selector:
    matchLabels:
      app: gridcapa
      component: config-server
  template:
    metadata:
      labels:
        app: gridcapa
        component: config-server
    spec:
      containers:
        - name: config-server
          image: docker.io/gridsuite/config-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: config-server-configmap-volume
            - mountPath: /tmp
              name: tmp-emptydir
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
          resources:
            requests:
              memory: "384Mi"
            limits:
              memory: "384Mi"
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 1
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 1
            successThreshold: 1
          args: ["--spring.config.additional-location=/config/"]
      restartPolicy: Always
      volumes:
        - name: config-server-configmap-volume
          configMap:
            name: config-server-configmap
        - name: tmp-emptydir
          emptyDir: {}
