k8s/base/cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra-svc
  labels:
    app: gridcapa
    component: cassandra-svc
spec:
  type: ClusterIP
  ports:
    - port: 9042
  selector:
    app: gridcapa
    component: cassandra
