k8s/base/config-notification-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-notification-server
  labels:
    app: gridcapa
    component: config-notification-server
spec:
  type: ClusterIP
  selector:
    app: gridcapa
    component: config-notification-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
