k8s/base/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gridcapa-minio
  labels:
    app: gridcapa
    component: gridcapa-minio
spec:
  type: ClusterIP
  selector:
    app: gridcapa
    component: gridcapa-minio
  ports:
    - port: 9000
      name: browser
