k8s/base/gridcapa-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gridcapa
  labels:
    app: gridcapa
    component: gridcapa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/cse/d2cc$ /cse/d2cc/ permanent;
      proxy_set_header X-Forwarded-Prefix /cse/d2cc/;
    nginx.ingress.kubernetes.io/server-snippet: |
      merge_slashes off;
spec:
  rules:
    - host: gridcapa.farao-community.com
      http:
        paths:
          - path: /cse/d2cc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gridcapa-app
                port:
                  number: 80
